[package]
name = "carrier-artanis"
version = "0.1.0"
authors = ["Arvid E. Picciani < aep@exys.org>"]
edition = "2018"

[dependencies]
carrier     = {version = "0.12.0", features = ["openwrt"] }
env_logger  = "0.6"
serde       = {version = "1.0.100", features = ["derive"]}
serde_json  = "1.0.40"
log         = "0.4.8"
socketcan   = "*"
mio-extras = "2.0.5"

[patch.crates-io]
carrier             = { path = '/home/aep/proj/devguard/carrier' }
